k8s-manifests/itda-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: itda-fe-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: itda-be-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: itda-redis-ns
