k8s-manifests/itda-service.yaml
###############################################################################
# 1) 프론트엔드 (itda-ui) Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: itda-ui
  namespace: itda-fe-ns
spec:
  selector:
    app: itda-ui
  type: ClusterIP               # LoadBalancer -> ClusterIP로 변경
  ports:
    - name: http
      protocol: TCP
      port: 5174
      targetPort: 5174

---
###############################################################################
# 2) 백엔드 Services (그대로 ClusterIP)
###############################################################################
# 15-svc-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: itda-auth
  namespace: itda-be-ns
spec:
  selector:
    app: itda-auth
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001

---
# 16-svc-search.yaml
apiVersion: v1
kind: Service
metadata:
  name: itda-search
  namespace: itda-be-ns
spec:
  selector:
    app: itda-search
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3002
      targetPort: 3002

---
# 17-svc-lyrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: itda-lyrics
  namespace: itda-be-ns
spec:
  selector:
    app: itda-lyrics
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3003
      targetPort: 3003

---
# 18-svc-translation.yaml
apiVersion: v1
kind: Service
metadata:
  name: itda-translation
  namespace: itda-be-ns
spec:
  selector:
    app: itda-translation
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3004
      targetPort: 3004

---
# 19-svc-playlist.yaml
apiVersion: v1
kind: Service
metadata:
  name: itda-playlist
  namespace: itda-be-ns
spec:
  selector:
    app: itda-playlist
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3005
      targetPort: 3005

---
###############################################################################
# 3) Redis
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: itda-redis-svc
  namespace: itda-redis-ns
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: itda-redis
  ports:
    - port: 6379
      targetPort: 6379
