k8s-manifests/itda-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itda-fe-ingress
  namespace: itda-fe-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: "itda-group"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:655088038759:certificate/6172625f-9b76-4ef7-9e33-aaba7793db56
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: it-da.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itda-ui
                port:
                  number: 5174
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itda-be-ingress
  namespace: itda-be-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: "itda-group"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:655088038759:certificate/6172625f-9b76-4ef7-9e33-aaba7793db56
spec:
  ingressClassName: alb
  rules:
    - host: it-da.site
      http:
        paths:
          - path: /api/google
            pathType: Prefix
            backend:
              service:
                name: itda-auth
                port:
                  number: 3001
          - path: /api/spotify
            pathType: Prefix
            backend:
              service:
                name: itda-search
                port:
                  number: 3002
          - path: /api/youtube
            pathType: Prefix
            backend: 
              service:
                name: itda-search
                port:
                  number: 3002
          - path: /api/track
            pathType: Prefix
            backend: 
              service:
                name: itda-search
                port: 
                  number: 3002
          - path: /api/playlist
            pathType: Prefix
            backend:
              service:
                name: itda-playlist
                port:
                  number: 3005
          - path: /api/lyrics
            pathType: Prefix
            backend:
              service:
                name: itda-lyrics
                port:
                  number: 3003
          - path: /api/translate
            pathType: Prefix
            backend:
              service:
                name: itda-translation
                port:
                  number: 3004
